<resources>
    <string name="search_by_filters">Поиск по фильтрам</string>
    <string name="brand">Марка</string>
    <string name="model">Модель</string>
    <string name="year">Год</string>
    <string name="min">Минимум</string>
    <string name="max">Максимум</string>
    <string name="price">Цена</string>
    <string name="mileage">Пробег</string>
    <string name="engine_power">Мощность двигателя</string>
    <string name="engine_capacity">Объём двигателя</string>
    <string name="fuel_type">Тип топлива</string>
    <string name="body_type">Тип кузова</string>
    <string name="color">Цвет</string>
    <string name="transmission">Коробка передач</string>
    <string name="drivetrain">Привод</string>
    <string name="wheel">Расположение руля</string>
    <string name="condition">Состояние</string>
    <string name="owners">Количество владельцев</string>
    <string name="show_ads">Показать объявления</string>
    <string name="back_button">Кнопка назад</string>
    <string name="ad_search">Поиск объявлений</string>
    <string name="you_searched">Вы искали</string>
    <string name="clear_search_history">Очистить историю поиска</string>
    <string name="lowest_price">Минимальная цена</string>
    <string name="highest_price">Максимальная цена</string>
    <string name="lowest_mileage">Минимальный пробег</string>
    <string name="highest_mileage">Максимальный пробег</string>
    <string name="newest_year">Самый новый год выпуска</string>
    <string name="oldest_year">Самый старый год выпуска</string>
    <string name="newest_listed">Новейшее объявление</string>
    <string name="oldest_listed">Самое старое объявление</string>
    <string name="nothing_found">Ничего не найдено</string>

    <string-array name="body_types">
        <item>Седан</item>
        <item>Купе</item>
        <item>Универсал</item>
        <item>Хэтчбек</item>
        <item>Минивэн</item>
        <item>Пикап</item>
        <item>Лимузин</item>
        <item>Фургон</item>
        <item>Кабриолет</item>
        <item>Лифтбек</item>
        <item>Внедорожник</item>
        <item>Грузовик</item>
    </string-array>

    <string-array name="conditions">
        <item>Не битый</item>
        <item>Битый</item>
        <item>Требует ремонта</item>
    </string-array>

    <string-array name="drivetrains">
        <item>Полный привод (AWD)</item>
        <item>Передний привод (FWD)</item>
        <item>Задний привод (RWD)</item>
    </string-array>

    <string-array name="fuel_types">
        <item>Бензин</item>
        <item>Дизель</item>
        <item>Гибрид</item>
        <item>Электро</item>
    </string-array>

    <string-array name="transmissions">
        <item>Автоматическая</item>
        <item>Роботизированная</item>
        <item>Вариатор</item>
        <item>Механическая</item>
    </string-array>

    <string-array name="wheels">
        <item>Правый руль</item>
        <item>Левый руль</item>
    </string-array>

    <string-array name="owners">
        <item>Без владельцев</item>
        <item>Один владелец</item>
        <item>Не более двух владельцев</item>
        <item>Не более трёх владельцев</item>
    </string-array>

    <string-array name="colors">
        <item>Чёрный</item>
        <item>Серый</item>
        <item>Серебристый</item>
        <item>Белый</item>
        <item>Красный</item>
        <item>Розовый</item>
        <item>Оранжевый</item>
        <item>Золотой</item>
        <item>Жёлтый</item>
        <item>Зелёный</item>
        <item>Голубой</item>
        <item>Синий</item>
        <item>Фиолетовый</item>
        <item>Пурпурный</item>
        <item>Коричневый</item>
        <item>Бежевый</item>
    </string-array>

    <plurals name="car_ads_counter">
        <item quantity="one">%1$d предложение</item>
        <item quantity="few">%1$d предложения</item>
        <item quantity="many">%1$d предложений</item>
        <item quantity="other">%1$d предложений</item>
    </plurals>
</resources>
